--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
           </button>
         </div>
         <div class="my-auto">
-          <button type="button py-4 px-5 " class="bg- btn btn-danger fw-bold">
+          <button
+            onclick="openBlogInNewTab()"
+            type="button py-4 px-5 "
+            class="bg- btn btn-danger fw-bold"
+          >
             BLOG
           </button>
         </div>
@@ -77,6 +81,108 @@
       </div>
     </div>
 
+    <div id="accordian_container" class="w-50 m-auto">
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed fw-bold"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseOne"
+              aria-expanded="false"
+              aria-controls="flush-collapseOne"
+            >
+              Discuss the scope of var, let, and const
+            </button>
+          </h2>
+          <div
+            id="flush-collapseOne"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <div class="accordion-body">
+              <h6>
+                var: The var statement declares variables that are scoped within
+                functions or globally. They can be initialized with a value. var
+                variables have either global or function scope, unlike let and
+                const, which have block scope.
+                <br />
+                <br />
+
+                let: The let statement declares local variables with block
+                scope, restricting their access to the block they are defined
+                in. These variables can be initialized with a value.
+                <br />
+                <br />
+                const: The const statement declares constants that cannot be
+                re-assigned. They are block-scoped similar to variables declared
+                with let. The value assigned to a constant cannot be changed,
+                and redeclaration of a constant is not allowed.
+              </h6>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed fw-bold"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseTwo"
+              aria-expanded="false"
+              aria-controls="flush-collapseTwo"
+            >
+              Tell us the use cases of null and undefined
+            </button>
+          </h2>
+          <div
+            id="flush-collapseTwo"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <div class="accordion-body">
+              undefined: The undefined value is returned when a variable is
+              declared but not initialized. It is also returned when a function
+              is called without a return value. It is a primitive value.
+
+              <br />
+              <br />
+              null: The null value is assigned to a variable to indicate that
+              the variable has no value. It is an object value that indicates a
+              non-existent or invalid object. It is a primitive value.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed fw-bold"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseThree"
+              aria-expanded="false"
+              aria-controls="flush-collapseThree"
+            >
+              What do you mean by REST API?
+            </button>
+          </h2>
+          <div
+            id="flush-collapseThree"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <div class="accordion-body">
+              Rest Api: REST stands for Representational State Transfer. Rest
+              API defines a set of constraints to be used for creating Web
+              services. REST APIs are mainly used when we want to build web
+              services, try to allow different systems and applications tryvto
+              interact with each other in a standardized way
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
