--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             type="button"
             class="btn btn-secondary"
             onclick="loadViewsData()"
+            id="sortButton"
           >
             Sort by view
           </button>
